--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     @import url(https://fonts.googleapis.com/css?family=Khula:700);
 
     body {
-      background: #111;
+      background: #000000;
     }
 
     .hidden {
@@ -26,7 +26,7 @@
       width: 800px;
       display: block;
       position: absolute;
-      color: white;
+      color: rgb(4, 0, 255);
       top: 0;
       bottom: 0;
       left: 0;
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Hello World.', 'Console Text', 'Made with Love.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Merry Christmas!', 'Yeah, you bet. Ho, ho, ho, and stuff.', 'Oh, my. Someone has vandalized that vehicle. You see, Max? The city is a dangerous place.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
