--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       width: 800px;
       display: block;
       position: absolute;
-      color: rgb(4, 0, 255);
+      color: rgb(5, 5, 55);
       top: 0;
       bottom: 0;
       left: 0;
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Merry Christmas!', 'Yeah, you bet. Ho, ho, ho, and stuff.', 'Oh, my. Someone has vandalized that vehicle. You see, Max? The city is a dangerous place.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Merry Christmas!', 'Yeah, you bet. Ho, ho, ho, and stuff.', 'Oh, my. Someone has vandalized that vehicle. You see, Max? The city is a dangerous place.'], 'text', ['green', 'green', 'green']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
